posiGen_FullsendBox/src/objects/QC_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Project__c</fullName>
        <label>Install Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PV Install</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>QC-Inspections</relationshipLabel>
        <relationshipName>QC_Inspections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QC-Inspection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QCI-{00000}</displayFormat>
        <label>QC-Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC-Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Dates_After_Result_Entered</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISCHANGED( Requested_Date__c ),ISCHANGED( Scheduled_Date__c )) , OR(ISPICKVAL( Result__c , &quot;Pass&quot;), ISPICKVAL( Result__c , &quot;Fail&quot;)))</errorConditionFormula>
        <errorMessage>You need to create a new QC-Inspection record for any new QC/inspection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Completed_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Completed_Date__c ), OR(ISPICKVAL( Result__c , &quot;Pass&quot;),ISPICKVAL( Result__c , &quot;Fail&quot;)))</errorConditionFormula>
        <errorMessage>Completed Date is required once a result is selected</errorMessage>
    </validationRules>
</CustomObject>